Fixing header bar on smaller screens.

--- a/_stylus/main.styl
+++ b/_stylus/main.styl
@@ -100,6 +100,7 @@ h4
     padding 10px
     background #222
     border-radius 4px
+    box-shadow 0 8px 6px -6px black
     // responsive
     margin-right -15px
     margin-left -15px
@@ -135,7 +136,6 @@ h4
     position absolute
     top 0
     right 0
-    bottom 0 
     left 0
 
 
